# Sesame-TK

./: .gitignore  AndroidManifest.xml  README.md  ShameList.MD  gradle.properties  settings.gradle.kts  可利用组件分析.md  支付宝验证码完整文档.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  demo_bug_report.md
.github/workflows/: android.yml  android_test.yml  debug.yml  upstream-sync.yml
app/: build.gradle.kts  proguard-rules.pro
app/libs/: api-100.aar  helper-100.aar  interface-100.aar  service-100-1.0.0.aar
app/src/main/: AndroidManifest.xml
app/src/main/aidl/fansirsqi/xposed/sesame/: ICallback.aidl  ICommandService.aidl  IStatusListener.aidl
app/src/main/assets/: log_viewer.html  xposed_init
app/src/main/assets/web/: semi_index.html  varlet_index.html
app/src/main/assets/web/css/: index.css  semi.min.css  vant.css
app/src/main/assets/web/js/: babel.min.js  iife.js  react-dom.development.js  react.development.js  semi-icons.min.js  semi-ui.min.js  varlet.js  vue3.js
app/src/main/res/drawable/: all_log.xml  blur_button_bg.xml  error_log_file.xml  farm.xml  forest.xml  github.xml  setting.xml
app/src/main/res/layout/: activity_main.xml  activity_rpc_debug.xml  base_title.xml  dialog_rpc_edit.xml  fragment_settings_list.xml  item_extend_function.xml  item_rpc_debug.xml  item_tab.xml  layout_settings_item.xml  list_item.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  styles.xml
app/src/main/res/values-zh-rCN/: strings.xml
gradle/: libs.versions.toml
scripts/: edit.sh
serve-debug/: README.MD  main.py  pyproject.toml  webui.py
(+386 files in other folders)
