[project]
name = "serve-debug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "frida>=17.5.1",
    "frida-tools>=14.5.0",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]
